testsuite/tests/grammar/invalid_lexers/case_4.lkt
lexer foo_example {
    foo
    match p"foo" {
        if previous_token isa foo then send(foo, 3)
    }
}
